Added the CSS file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/25a1235417.js" crossorigin="anonymous"></script>
+    <!-- font from google    -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- header  -->
@@ -19,6 +23,7 @@
                 <li><a href="#">Index</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
+                
             </ul>
             <!-- Search box  -->
             <div class="search-field">
@@ -38,8 +43,9 @@
         <div class="hero-right-section">
             <img src="./avtar.png" alt="Person">
             <!-- Chat Button  -->
-            <button>Chat with us</button>
-            
+            <div class="hero-right-section-btns">
+                <button>Chat with us</button>
+            </div>
         </div>
     </section>
     <section>
@@ -47,7 +53,7 @@
             <!-- Footer text  -->
             <p>Copyright 2022 logo. All rights reserved</p>
             <ul>
-                <!-- copide code from font awesome -->
+                <!-- copied code from font awesome -->
                 <li><a href=""><i class="fa-brands fa-github"></i></a></li>
                 <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                 <li><a href=""></a><i class="fa-brands fa-youtube"></i></li>
